--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,8 @@ synsets1000-subgraph.txt
 
 # Please don't unless you know what you're doing
 #*.iml
-#**/.idea/**
+**/.idea/
+!./.idea/
 
 ### Java ###
 # Compiled class file
